# RobotControlCenter

./: .gitignore  CMakeLists.txt  TODO
app/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  GameSceneItem.cpp  GameSceneItem.h  ImageItem.cpp  ImageItem.h  PythonGameScreen.qml  SettingsDialog.qml  Style.qml  main.cpp  main.qml  qml.qrc
app/controls/: MyButton.qml  MyCheckBox.qml  MyComboBox.qml  MyDialog.qml  MyIconTextButton.qml  MyLabel.qml  MyNavigationBar.qml  MyNavigationButton.qml  MyStatusIcon.qml  MyTabButton.qml  MyTextEdit.qml  MyToolButton.qml
lib/: CMakeLists.txt  IJoystick.cpp  IJoystick.h  Joystick.h  JoystickManager.cpp  SDL2EventLoop.cpp  SDL2EventLoop.h
lib/ai/: AdvancedProcessor.cpp  AdvancedProcessor.h  IAgent.cpp  IAgent.h  PythonAgent.cpp  PythonAgent.h
lib/aruco/: Aruco.cpp  Aruco.h  CalibrationController.cpp  CalibrationController.h  Marker.cpp  Marker.h  MarkerList.cpp  MarkerList.h  MarkerTracker.cpp  MarkerTracker.h  Plane3d.cpp  Plane3d.h  SceneTracker.cpp  SceneTracker.h
lib/camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraManager.cpp  CameraManager.h  CameraReader.cpp  CameraReader.h  ICamera.cpp  ICamera.h  ICameraManager.cpp  ICameraManager.h  MultiCameraManager.cpp  MultiCameraManager.h  ReplayCam.cpp  ReplayCam.h  ReplayCamManager.cpp  ReplayCamManager.h  ReplayThread.cpp  ReplayThread.h
lib/game/: GameScene.cpp  GameScene.h  MarkerSceneItem.cpp  MarkerSceneItem.h  PythonGameMode.cpp  PythonGameMode.h  WorldEdge.cpp  WorldEdge.h
lib/joystick/: GamePad.cpp  GamePad.h  GamePadManager.cpp  GamePadManager.h  IJoystick.h  Joystick.cpp  Joystick.h  JoystickManager.cpp  JoystickManager.h
lib/kalman/: KalmanTracker1D.cpp  KalmanTracker1D.h  KalmanTracker3D.cpp  KalmanTracker3D.h  RotationCounter.cpp  RotationCounter.h
lib/network/: Robot.cpp  Robot.h  RobotNetwork.cpp  RobotNetwork.h
lib/performance/: LogPerformance.cpp  LogPerformance.h  PerformanceMonitor.cpp  PerformanceMonitor.h
lib/pipe/: NonBlockingPipe.cpp  NonBlockingPipe.h  NonBlockingReceiverPipe.cpp  NonBlockingReceiverPipe.h  NonBlockingSenderPipe.cpp  NonBlockingSenderPipe.h  PipeController.cpp  PipeController.h  RobotCameraPipe.cpp  RobotCameraPipe.h  RobotCommandPipe.cpp  RobotCommandPipe.h
lib/robot/: FakeRobotManager.cpp  FakeRobotManager.h  IRobotManager.cpp  IRobotManager.h  MultiRobotManager.cpp  MultiRobotManager.h  Robot.cpp  Robot.h  RobotNetwork.cpp  RobotNetwork.h  RobotSettings.cpp  RobotSettings.h
lib/settings/: AppSettings.cpp  AppSettings.h  SettingsController.cpp  SettingsController.h
lib/socket/: RobotSocket.cpp  RobotSocket.h  RobotSocketManager.cpp  RobotSocketManager.h
lib/util/: FactoryMethod.cpp  FactoryMethod.h
python/: README.txt
python/jupyter/: 1 - The robots are coming.ipynb
python/robots/: __init__.py  camera.py  camera_parser.py  command.py  robot.py  status.py
tests/: CMakeLists.txt  HeaderTemplateCStyle.txt  HeaderTemplateHashtagStyle.txt  TestFactory.cpp  TestFactory.h  TestSourceCode.cpp  TestSourceCode.h  TestWorldEdge.cpp  TestWorldEdge.h  main.cpp  resources.qrc
(+9 files in other folders)
